classDiagram
    %% ── 现有模型（不修改）────────────────────────────
    class Task {
        +DateTime? scheduledTime
        +TaskStatus status
        +ConflictState conflictState
        +int durationMinutes
        +bool effective
        +bool isDone
        +bool hasPendingConflict
        +bool isConflictBlocked
        +bool isRepeating
    }

    %% ── 新增：状态映射层（task_status_style.dart）─────
    class TaskVisualState {
        <<enum>>
        unscheduled
        upcoming
        inProgress
        overdue
        done
        conflictBlocked
    }

    class TaskStatusStyle {
        +Color color
        +Color softColor
        +IconData icon
        +bool filled
        +String label
        +bool actionable
        +double opacity
        +String a11yLabel
    }

    class TaskStatusStyleResolver {
        +TaskVisualState resolveVisualState(Task t, DateTime now)
        +TaskStatusStyle styleOf(TaskVisualState s, BuildContext ctx)
    }

    Task ..> TaskStatusStyleResolver : resolveVisualState 入参
    TaskStatusStyleResolver ..> TaskVisualState : resolveVisualState 返回
    TaskStatusStyleResolver ..> TaskVisualState : styleOf 入参
    TaskStatusStyleResolver ..> TaskStatusStyle : styleOf 返回

    %% ── 组件层（修改 task_card.dart）──────────────────
    class TaskCard {
        +Task task
        +VoidCallback onTap
        +VoidCallback onToggle
        +VoidCallback onDelete
        +VoidCallback? onResolveOverride
        +Widget build(ctx)
    }

    class _StatusIcon {
        +TaskVisualState state
        +TaskStatusStyle style
        +VoidCallback onTap
        +Widget build(ctx)
    }

    TaskCard *-- _StatusIcon : 包含并渲染
    TaskCard ..> TaskStatusStyleResolver : resolveVisualState / styleOf
    _StatusIcon ..> TaskStatusStyle : 读取 color/icon/filled

    %% ── 模块层（修改）────────────────────────────────
    class FilterTabBar {
        +TaskFilter filter
        -List _tabs : 『进行中』→『待办』
    }

    class TaskList {
        +List~Task~ tasks
        +Widget build(ctx)
    }

    class TasksTab {
        -Future _deleteWithUndo(Task, TaskStore)
        -Future _toggle(Task, TaskStore)
    }

    TaskList o-- TaskCard : 逐项渲染
    TasksTab ..> TaskList : 传 onDelete / onToggle
    TasksTab ..> TaskStore : delete / add（撤销重插）
    TasksTab ..> ReminderService : cancelTask / notifyTaskChanged
